@@ -10,13 +10,26 @@ namespace ml {
 namespace seccomp {
 
 //! \brief
-//! Installs Sandbox/sys call filters
+//! Installs secure computing modes for Linux, macOs and Windows
 //!
 //! DESCRIPTION:\n
+//! ML processes require a subset of system calls to function correctly.
+//! These are create a named pipe, connect to a named pipe, read and write
+//! no other system calls are necessary and should be resticted to prevent
+//! malicious actions.
 //!
 //! IMPLEMENTATION DECISIONS:\n
-//! Platform specific
+//! Implementations are platform specific more details can be found in the
+//! particular .cc files.
 //!
+//! Linux:
+//! Seccomp BPF is used to restrict system calls on kernels since 3.5.
+//!
+//! macOs:
+//! The sandbox facility is used to restict access to system resources.
+//!
+//! Windows:
+//! Job Objects prevent the process spawning another.
 //!
 class CSystemCallFilter {
 public:
